--- a/src/style/app.css
+++ b/src/style/app.css
@@ -15,3 +15,13 @@
     margin-right: 5px;
     cursor: pointer;
 }
+
+.ts_popover_description {
+    background-color: white;
+    padding: 3px;
+    width: 400px;
+}
+
+.ts_popover_description h1 {
+    margin: 3px 0px;
+}
