--- a/src/style/app.css
+++ b/src/style/app.css
@@ -26,3 +26,12 @@
     margin: 3px 0px;
     font-size: 14px;
 }
+
+.icon-plus {
+    font-size: 14px;
+    color: #888;
+}
+.icon-minus {
+    font-size: 14px;
+    color: #888;
+}
